Fixed information modal bug by removing the reference to the information modal inside the showChangelog function Added data-bs-dismiss modal attribute to changelog button Added changelog info to cache so it only gets displayed once when a new version is released Updated all modal titles to H1 tags for better document heirarchy Removed the header and footer of the changelog modal to make it cleaner. Also the close buttons don't work half the time, unknown bootstrap bug? Updated the way the changelog is displayed with a new, easier to write in JSON format. Updated the changelog with the most recent changes from commit messages Removed the changelog code from slothtime.js and moved it to config.js Hid the FAB buttons in desktop mode Moved themes and settings buttons to action row Added a boolean value to the cache to track if the clock is hidden or not Added a boolean value to the cache to track if the total time format or hours format is displayed in the table Updated the clock to be more minimal, remove the 'frosted' CSS style (from the good old days) Updated top margin and text spacing on about page Auto format the time entered so it's in 12hr HH:MM format Auto calc the total task time based on time entered, control via setting later, still not 100% accurate

--- a/public/static/styles/styles.css
+++ b/public/static/styles/styles.css
@@ -160,9 +160,20 @@ a:hover {
    overflow: auto;
 }
 
+/* specifically the changelog modal */
+#changelog-modal .modal-dialog {
+   max-width: 80vw;
+}
+
 /**** Cards ****/
 .card {
    --bs-card-bg: var(--bg-color);   
+   --bs-card-border-color: var(--bg-color);
+}
+
+.card h1,
+.card .col .fs-5 {
+   color: var(--sub-color);
 }
 
 /** mobile cards **/
@@ -530,13 +541,22 @@ textarea {
    background: transparent;
 }
 
-.menu-btn:hover {
+.menu-btn:hover,
+.menu-btn:focus-visible {
    color: var(--main-color);
    background-color: var(--sub-color);
 }
 
 .menu-btn i {
-   font-size: 1.5rem;
+   font-size: 1.3rem;
+}
+
+#action-row .col:first-child {
+   margin-left: 5rem;
+}
+
+#action-row .col:last-child {
+   margin-right: 5rem;
 }
 
 /**** Media Queries ****/
